# thinkingtype

./: .env.example  .gitignore  BUILD_LOG.md  FACTS.md  LICENSE  README.md  REFACTOR_PLAN.md  ROLLOUT.md  SUMMARY.md  pyproject.toml  test_anthropic.py
configs/: gates_v1.yaml  gates_v1_fair.yaml  gates_v1_realism.yaml  gates_v1_rubric.yaml  gates_v2.yaml  v0_artifacts_only.yaml  v0_default.yaml  v0_sentences_only.yaml  v0b_esc_frontier.yaml  v0b_esc_oldgen.yaml  v0b_frontier.yaml  v0b_oldgen_fixed.yaml  v0b_pilot_frontier.yaml  v0b_pilot_oldgen.yaml  v0c_release.yaml
data/inputs/: escalation_sentences.csv  sentences.csv
docs/: GATE_DRIFT.md  index.html  index.md
docs/archive/: v0b.md
results/gates/: BATCH1_REPORT.md
src/typo_eval/: analysis.py  analysis_backup.py  analysis_streamlined.py  cli.py  comparison.py  config.py  inference.py  inputs.py  plots_streamlined.py  render.py  stats.py  taxonomy.py
tests/: test_config_schema.py  test_render_smoke.py
typography-eval/: .gitignore  README.md
typography-eval/configs/: v0_artifacts_only.yaml
typography-eval/scripts/: fetch_fonts.py  (+1 more)
typography-representation/: README.md  pyproject.toml  requirements.txt
typography-representation/assets/fonts/: README.md
typography-representation/configs/: fontset_v1_pinned_open_15.json  v0.yaml
typography-representation/data/: sentences_v0.csv  variants_v0.csv
typography-representation/scripts/: fetch_fonts.py
typography-representation/src/typography/: __init__.py  analysis.py  cli.py  config.py  fontset.py  generate.py  infer.py  io.py  metrics.py  render.py  schemas.py
typography-representation/src/typography/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
typography_eval/: README.md  config.py  schemas.md
(+349 files in other folders)
